--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ section {
 
 /* component in information section end */
 
+
+
 /* component in log section :start */
 
 andypf-json-viewer::part(wrapper) {
@@ -112,9 +114,45 @@ andypf-json-viewer::part(wrapper) {
     background-color: #263238;
 }
 
+#fully-slider-target {
+    height: 30px;
+}
+
+#fully-slider {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: #ddd;
+    border-radius: 4px;
+    outline: none;
+    appearance: none;
+    cursor: pointer;
+    padding: 0 20px;
+    box-sizing: border-box;
+    z-index: 10;
+}
+
+#fully-slider::-webkit-slider-thumb {
+    appearance: none;
+    height: 20px;
+    width: 20px;
+    background: #4CAF50;
+    border-radius: 50%;
+    border: 2px solid white;
+    margin-top: -6px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+    transition: background 0.3s ease;
+}
+
+#fully-slider::-webkit-slider-thumb:hover {
+    background: #45a049;
+}
 /* component in fully section end */
 
 /* component in partially section :start */
+
 #partially-target {
     height: 700px;
     background-color: #263238;
