--- a/style.css
+++ b/style.css
@@ -110,8 +110,16 @@ andypf-json-viewer::part(wrapper) {
 /* component in fully section :start */
 
 #fully-target {
+    width: 100%;
     height: 700px;
     background-color: #263238;
+    position: relative;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 #fully-slider-target {
