--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ canvas {
 }
 
 .accordion-toggle {
-    background-color: #263238;
+    background-color: #45a049;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -177,7 +177,7 @@ canvas {
     text-align: left;
     cursor: pointer;
     font-size: 16px;
-    border-radius: 4px;
+    border-radius: 20px;
 }
 
 .accordion-toggle:hover {
@@ -185,16 +185,18 @@ canvas {
 }
 
 .accordion-content {
-    max-height: 0;
+    max-height: 0px;
     overflow: hidden;
     transition: 0.4s ease;
-    padding: 0 15px;
+    padding: 0 15px; /* 상하 padding 제거 */
     background-color: #f9f9f9;
     border: 1px solid #ccc;
     border-top: none;
+    border-radius: 20px;
 }
+
 .accordion-content.open {
-    padding: 15px;
+    padding: 10px 15px;
     max-height: 500px; /* 충분히 큰 값으로 설정 */
 }
 
@@ -213,6 +215,37 @@ canvas {
     height: 20px;
     background-color: transparent;
     padding: 20px 0;
+}
+
+#p-button-container {
+    margin-top: 13px;
+    margin-bottom: 20px;
+}
+
+.partial-button {
+    width: 120px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 20px;
+    padding: 10px 16px;
+    background-color: #4CAF50;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.partial-button:hover {
+    background-color: #45a049;      /* hover 시 더 짙은 녹색 */
+    transform: translateY(-2px);    /* 살짝 위로 튀는 효과 */
+}
+
+.partial-button:active {
+    background-color: #388e3c;      /* 클릭 시 더 눌린 색상 */
+    transform: scale(0.98);         /* 클릭 시 눌리는 느낌 */
 }
 
 /* component in partially section end */
