--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ canvas {
     padding: 0 15px; /* 상하 padding 제거 */
     background-color: #f9f9f9;
     border: 1px solid #ccc;
+    margin: 10px;
     border-top: none;
     border-radius: 20px;
     scroll-behavior: smooth;
@@ -209,6 +210,10 @@ canvas {
 .accordion-content.open {
     padding: 10px 15px;
     max-height: 500px; /* 충분히 큰 값으로 설정 */
+}
+
+.info-title {
+    margin-bottom: 50px;
 }
 
 .category-title {
@@ -239,6 +244,18 @@ canvas {
     transform: translateY(-2px);
 }
 
+.category-list {
+    max-height: 10000px;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+}
+
+.category-list.hide {
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+}
+
 .main-qunt {
     font-weight: bold;
     color: #263238;
@@ -258,14 +275,78 @@ canvas {
 
 
 
+.json-content-1 {
+    max-height: 4000px;
+    overflow: hidden;
+    transition: max-height 0.6s ease;
+}
 
+.json-content-1.hide {
+    max-height: 0px;
+    transition: max-height 0.6s ease;
+}
 
-.json-section {
+.category-container {
+    margin: 10px;
     margin-bottom: 10px;
     padding: 8px;
-    border-bottom: 1px solid #ccc;
+    border: 1px solid #ccc;
+    border-radius: 20px;
     word-break: break-word;
 }
+
+.json-section {
+    margin: 10px;
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    word-break: break-word;
+}
+
+.json-section-1 {
+    margin: 10px;
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    word-break: break-word;
+}
+
+.json-section-2 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    word-break: break-word;
+}
+
+.json-section-3 {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    word-break: break-word;
+}
+
+.json-section-4 {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    word-break: break-word;
+}
+
+.json-section-5 {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    word-break: break-word;
+    /* background-color: #4CAF50; */
+}
+
 
 .json-header {
     font-weight: bold;
@@ -275,15 +356,21 @@ canvas {
     text-transform: uppercase;
 }
 
+.json-array-index {
+    font-size: 25px;
+}
+
 .json-key-1 {
     font-size: 30px;
     font-weight: bold;
     color: #222;
     margin-top: 6px;
+    margin-bottom: 5px;
 }
 
 .json-key-2 {
     font-size: 25px;
+    font-weight: bold;
 }
 
 .json-key-3 {
@@ -297,12 +384,6 @@ canvas {
 .json-key-5 {
     font-size: 23px;
 }
-
-/* .json-array-index {
-    font-weight: bold;
-    margin-top: 5px;
-    color: #003366;
-} */
 
 .json-value {
     margin-left: auto;
@@ -357,9 +438,9 @@ canvas {
     transform: scale(0.98);         /* 클릭 시 눌리는 느낌 */
 }
 
-.hide {
+/* .hide {
     display: none;
-}
+} */
 /* component in partially section end */
 
 section ul {
