--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ canvas {
 }
 
 .slider::-webkit-slider-thumb:hover {
-    background: #45a049;
+    background: #263238;
 }
 
 
@@ -246,8 +246,14 @@ canvas {
 
 .category-list {
     max-height: 10000px;
+    width: 95%;
     overflow: hidden;
     transition: max-height 0.4s ease;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    padding: 8px;
+    background-color: #e0f5e0;
+    font-family: sans-serif;
 }
 
 .category-list.hide {
@@ -293,25 +299,21 @@ canvas {
     border: 1px solid #ccc;
     border-radius: 20px;
     word-break: break-word;
-}
-
-.json-section {
-    margin: 10px;
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    word-break: break-word;
+    background-color: #f1faf0;
 }
 
 .json-section-1 {
     margin: 10px;
     margin-bottom: 10px;
     padding: 8px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     border: 1px solid #ccc;
     border-radius: 20px;
     word-break: break-word;
+    background-color: #f1faf0;
 }
+
 
 .json-section-2 {
     margin-bottom: 10px;
@@ -320,6 +322,7 @@ canvas {
     border: 1px solid #ccc;
     border-radius: 20px;
     word-break: break-word;
+    background-color: #e0f5e0;
 }
 
 .json-section-3 {
@@ -328,6 +331,7 @@ canvas {
     border: 1px solid #ccc;
     border-radius: 20px;
     word-break: break-word;
+    background-color: #c9ebc9;
 }
 
 .json-section-4 {
@@ -336,6 +340,7 @@ canvas {
     border: 1px solid #ccc;
     border-radius: 20px;
     word-break: break-word;
+    background-color: 	#b0e1b0;
 }
 
 .json-section-5 {
@@ -344,7 +349,7 @@ canvas {
     border: 1px solid #ccc;
     border-radius: 20px;
     word-break: break-word;
-    /* background-color: #4CAF50; */
+    background-color: #99d699;
 }
 
 
@@ -369,25 +374,28 @@ canvas {
 }
 
 .json-key-2 {
-    font-size: 25px;
+    font-size: 28px;
     font-weight: bold;
 }
 
 .json-key-3 {
-    font-size: 23px;
+    font-size: 26px;
+    font-weight: bold;
 }
 
 .json-key-4 {
-    font-size: 23px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .json-key-5 {
     font-size: 23px;
+    font-weight: bold;
 }
 
 .json-value {
     margin-left: auto;
-    font-size: 25px;
+    font-size: 20px;
     color: #333;
 }
 
