--- a/style.css
+++ b/style.css
@@ -109,6 +109,26 @@ andypf-json-viewer::part(wrapper) {
 
 /* component in fully section :start */
 
+.visual-title {
+    margin-bottom: 0px;
+}
+
+.demo {
+    width: 300px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: #45a049;
+    color: white;
+    outline: none;
+    border: none;
+    font-weight: bold;
+}
+
+.demo:hover {
+    background-color: #388e3c;
+    transform: translateY(-2px);
+}
+
 #fully-target {
     width: 100%;
     height: 700px;
